--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,8 @@
 	position: relative;
 	left: 100px;
 	width: 800px;
-	background-color: #ddd
+	height: 100px;
+	/*background-color: #ddd*/
 }
 
 h1	{
@@ -17,6 +18,10 @@ h1	{
 	background-color: #aaa;
 }
 
-textarea	{
+.postBox	{
+	top: 0;
+	left: 0;
+	position: relative;
 	width: 800px;
+	height: 50px;
 }
